test/Error/Purity/PurifyReadWrite1/Main.ds

-- x1 is forced const due to suspension.
--	this conflicts with update, which requires it to be mutable.
succ :: Int -> Int
succ x = x + 1

succDelay ()
 = do 	x	= 5
	y	= succ @ x
	x	:= 23
	
	
	
